[package]
name = "sekrets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
anyhow = "1.0.82"
aes-gcm = "0.10"
thiserror = "2.0.11"
argon2 = "0.5"
rand = "0.8.5"
base64 = "0.13"
rpassword = "7.0" 