[package]
name = "sekrets"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Syed Ishtiaque Ahmad <ishtiaque05@gmail.com>"]
description = "A secret management CLI tool"
repository = "https://github.com/ishtiaque05/sekrets"
homepage = "https://github.com/ishtiaque05/sekrets"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "security", "secrets"]


[package.metadata.deb]
maintainer = "Syed Ishtiaque Ahmad <ishtiaque05@gmail.com>"
depends = "libc6 (>= 2.28)"
priority = "optional"
section = "utils"
assets = [
    ["target/release/sekrets", "/usr/local/bin/", "755"]
]
maintainer-scripts = "debian/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
anyhow = "1.0.82"
aes-gcm = "0.10"
thiserror = "2.0.11"
argon2 = "0.5"
rand = "0.9.3"
base64 = "0.13"
rpassword = "7.0" 
dirs = "5.0"
zxcvbn = "2.2"
memorable-wordlist = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
flate2 = "1.0"
tar = "0.4"
tempfile = "3.5"

[dev-dependencies]
googletest = "0.13"
assert_cmd = "2.0"
tempfile = "3.5"
predicates = "2.1"
temp-env = "0.2"
